--- a/sdk-setup/systemd/home-mersdk-share-dynexec-docker.service
+++ b/sdk-setup/systemd/home-mersdk-share-dynexec-docker.service
@@ -11,7 +11,7 @@ EnvironmentFile=-/etc/mersdk.env.systemd
 EnvironmentFile=-/etc/login.defs.systemd
 ExecStartPre=/bin/mkdir -p /home/mersdk/.share.raw
 ExecStartPre=/bin/mount --move /home/mersdk/share /home/mersdk/.share.raw
-ExecStart=/usr/bin/dynexecfs -f -o uid=${UID_MERSDK},gid=${GID_MERSDK},allow_other,root=/home/mersdk/.share.raw /home/mersdk/share
+ExecStart=/usr/bin/dynexecfs -f -o uid=${UID_MERSDK},gid=${GID_MERSDK},allow_other,${DYNEXECFS_FLAGS},root=/home/mersdk/.share.raw /home/mersdk/share
 TimeoutSec=90
 
 [Install]
